kubernetes-sandbox/apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:

  # for nginx-ingress (NOT ingress-nginx, the open source one)
  # annotations:
    # nginx.org/rewrites: "serviceName=restful-blog-service rewrite=/"

  name: app-ingress
  namespace: apps
spec:
  ingressClassName: nginx
  rules:
  - host: pdae-test.germanywestcentral.cloudapp.azure.com
    http:
      paths:
      - path: /restful-blog
        pathType: Prefix
        backend:
          service:
            name: restful-blog-service
            port: 
              number: 80
              
      - path: /http-echo
        pathType: Prefix
        backend:
          service:
            name: http-echo
            port: 
              number: 80
